@@ -5,6 +5,7 @@ v3.6.0 (Unreleased)
 - Improvement: Added close button for multiselect selected items in Google font variants.
 - Fix: CLS – Flashing desktop menu on mobile view.
 - Improvement: Changed customizer submenu control title from 'Container Animation' to 'Submenu Animation'.
+- Improvement: Move 'Submenu Animation' control from General tab to Design  tab.
 
 v3.5.0
 - Fix: Aspect ratio is changed for YouTube embed block.
